# open_asr_leaderboard

./: .env.example  .gitignore  README.md  pyproject.toml  sync_console.sh
abr/: run_eval.py
api/: dataset_catalog.py  language_catalog.py  run_api.sh  run_api_longform.sh  run_api_ml.sh  run_eval.py  run_eval_ml.py  submit_jobs.sh  ui_server.py
api/providers/: __init__.py  aquavoice_provider.py  assemblyai_provider.py  cartesia_provider.py  deepgram_provider.py  revai_provider.py  (+6 more)
ctranslate2/: run_eval.py
deploy/: open-asr-console.service
espnet/: run_eval.py
granite/: run_eval_speculative.py
higgs_audio/: run_eval_higgs_audio.py
kyutai/: run_eval.py
liteASR/: run_eval.py
nemo_asr/: run_eval.py  run_eval_long.py  run_eval_ml.py  run_eval_salm.py
normalizer/: __init__.py  data_utils.py  english_abbreviations.py  eval_utils.py  normalizer.py
omniasr/: run_eval.py  run_eval_ml.py
phi/: run_eval.py  run_eval_ml.py
qwen/: run_eval.py  run_eval_ml.py
requirements/: requirements-api.txt  requirements-ui.txt  requirements.txt  requirements_jobs.txt
scripts/: plot_en_longform.py  plot_en_shortform.py  plot_multilingual.py  plot_utils.py  score_bucket_results.py
soundsgoodai/: run_eval.py
speechbrain/: run_eval.py
tensorrtllm/: run_eval.py  whisper_utils.py
tests/: test_audio_preprocessing.py  test_dataset_catalog.py  test_slack_notifications.py  test_streaming_api_providers.py  test_ui_server.py
transformers/: run_eval.py  run_eval_ml.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+13 files in other folders)
